<resources>
    <!--Acceso usando Google -->
    <string name="web_client_id"></string>
    <string name="google_maps_key"></string>

    <string name="app_name">Torneos de Ajedrez</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="nav_header_title">Torneos de Ajedrez</string>
    <string name="nav_header_desc">Navigación</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_torneos">Torneos</string>
    <string name="menu_jugadores">Jugadores</string>
    <string name="menu_inscripciones">Inscripciones</string>
    <string name="menu_mapa">Mapa interactivo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="ver_partidas">Ver Partidas</string>
    <string name="detalle_torneo">Detalle del Torneo</string>
    <string name="estrella">Estrella</string>
    <string name="filtro">Filtro</string>
    <string name="title_activity_login">Torneos de Ajedrez</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="action_sign_in">Ingresar o registrarse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Formato de correo no válido</string>
    <string name="invalid_password">La contraseña debe tener al menos 8 caracteres e incluir una mayúscula, una minúscula y un número</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="click_to_register">No tengo cuenta</string>
    <string name="full_name">Nombre completo</string>
    <string name="password_confirm">Confirmar contraseña</string>
    <string name="already_have_account">Ya tengo cuenta</string>
    <string name="action_register">Registrar</string>
    <string name="create_account">Crear cuenta</string>

    <string name="invalid_full_name">Ingrese nombre completo</string>
    <string name="invalid_email">Correo inválido</string>
    <string name="passwords_not_match">Las contraseñas no coinciden</string>
    <string name="login_with_google">Ingresar con Google </string>

    <string name="google_sign_in">Ingresar con Google </string>
    <string name="ingresar_con_google">Ingresar con Google</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="logout_message">¿Seguro que quiere cerrar sesión?</string>
    <string name="logout_confirm">Cerrar sesión</string>
    <string name="cancel">Cancelar</string>
    <string name="profile">Perfil del usuario</string>
    <string name="logout">Cerrar sesión</string>

    <string name="account">Cuenta</string>
    <string name="to_be_player">Quiero ser jugador</string>
    <string name="new_players">Nuevos jugadores</string>
    <string name="tournament_registrations">Inscripciones a torneos</string>
    <string name="title_activity_register">Registro de nuevo usuario</string>
    <string name="menu_mis_inscripciones">Mis inscripciones</string>
    <string name="perfil">Perfil</string>
    <string name="vista_general">Vista general</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="login">Inicio de sesión</string>
    <string name="register">Registro</string>
    <string name="detalle_jugador">Detalle del Jugador</string>
    <string name="fixture">Fixture del Torneo</string>
    <string name="nuevos_jugadores">Solicitudes de nuevos jugadores</string>
    <string name="detalle_partida">Detalle de la Partida</string>
    <string name="mis_inscripciones">Mis inscripciones</string>
    <string name="movimientos">Movimientos</string>
    <string name="cargar_movimientos">Cargar Movimientos</string>
    <string name="torneo_imagen">Imágen del torneo</string>
    <string name="solicit_el_alta_como_jugador_para_participar">¡Solicitá el alta como jugador para participar!</string>
    <string name="cambiar_estado">Cambiar estado</string>
</resources>