<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    tools:ignore="ExtraText">

    <!-- Sección Principal -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_torneos"
            android:icon="@drawable/ic_trofeo"
            android:title="@string/menu_torneos" />
        <item
            android:id="@+id/nav_jugadores"
            android:icon="@drawable/ic_jugador"
            android:title="@string/menu_jugadores" />
        <item
            android:id="@+id/nav_inscripciones"
            android:icon="@drawable/ic_lapiz"
            android:title="@string/menu_inscripciones" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_mapa" />
    </group>
    <!-- Separador visual -->
    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"
                android:checkable="false" />
        </menu>
    </item>
</menu>